<?xml version="1.0" encoding="utf-8"?>

<!--the root view must be the DrawerLayout-->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".Registration"
    tools:ignore="HardcodedText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00999999"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="Registracija"
                android:textColor="@color/red"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/first_name"
                android:paddingRight="20dp"
                android:textColor="@color/white"

                android:textSize="30dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:hint="Ime"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/red"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/last_name"
                android:paddingRight="20dp"
                android:textColor="@color/white"

                android:textSize="30dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:hint="Prezime"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/red"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/address"
                android:paddingRight="20dp"
                android:textColor="@color/white"

                android:textSize="30dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:hint="Adresa"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/red"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/phone"
                android:paddingRight="20dp"
                android:textColor="@color/white"

                android:textSize="30dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:hint="Kontakt telefon"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/red"></EditText>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/username"
                android:paddingRight="20dp"
                android:textColor="@color/white"

                android:textSize="30dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:hint="Korisničko ime"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/red"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingLeft="20dp"
                android:text="@string/password"
                android:paddingRight="20dp"
                android:textColor="@color/white"

                android:textSize="30dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:layout_gravity="center"
                android:hint="Lozinka"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/red"></EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:onClick="registration">
            </Button>




        </LinearLayout>
    </ScrollView>


    <!--this the navigation view which draws
    and shows the navigation drawer-->
    <!--include the menu created in the menu folder-->

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>