<?xml version="1.0" encoding="utf-8"?>

<!--the root view must be the DrawerLayout-->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".Login"
    tools:ignore="HardcodedText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00999999"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="Prijavljivanje"
                android:textColor="@color/red"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="50dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:hint="Korisničko ime"
                android:inputType="textPersonName"
                android:textColor="@color/red"
                android:textColorHint="@color/gray"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:background="@color/white"
                android:ems="10"
                android:gravity="left"
                android:paddingLeft="10dp"
                android:hint="Lozinka"
                android:inputType="textPassword"
                android:textColor="@color/red"
                android:textColorHint="@color/gray"
                android:textSize="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="80dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_an_account"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_marginLeft="30dp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:clickable="true"
                    android:onClick="registration"
                    android:text="@string/registration"
                    android:textColor="@color/red"
                    android:gravity="right"
                    android:textSize="20dp"></TextView>

            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:onClick="login">


            </Button>


        </LinearLayout>
    </ScrollView>


    <!--this the navigation view which draws
    and shows the navigation drawer-->
    <!--include the menu created in the menu folder-->

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>