<?xml version="1.0" encoding="utf-8"?>

<!--the root view must be the DrawerLayout-->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".ServeToWin"
    tools:ignore="HardcodedText">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00999999"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="Serviraj za pobedu"
                android:textColor="@color/red"
                android:textSize="40dp"
                android:id="@+id/bookTitle"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/serviraj_za_pobedu" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/favorite_button1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="#00ffffff"
                    android:src="@android:drawable/btn_star" />

                <ImageButton
                    android:id="@+id/favorite_button2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="#00ffffff"
                    android:src="@android:drawable/btn_star" />

                <ImageButton
                    android:id="@+id/favorite_button3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="#00ffffff"
                    android:src="@android:drawable/btn_star" />

                <ImageButton
                    android:id="@+id/favorite_button4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="#00ffffff"
                    android:src="@android:drawable/btn_star" />

                <ImageButton
                    android:id="@+id/favorite_button5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="#00ffffff"
                    android:src="@android:drawable/btn_star" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="Autor: Novak Đoković"
                android:textColor="@color/gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="Broj strana: 403"
                android:textColor="@color/gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="Opis: Novak Đoković je, po mišljenju sportskih novinara, 2011. ostvario najbolju igračku sezonu u istoriji tenisa. Osvojio je deset turnira, od toga tri grend slem titule, i ostvario niz od četrdeset tri uzastopne pobede. A nepune dve godine ranije ovaj šampion začudo jedva da je mogao da završi turnir. Kako je igrač koga su dotle mučili bolovi, teškoće sa disanjem i povrede na terenu odjednom postao teniser broj 1 na svetu? Odgovor je neverovatan: promenio je način ishrane."
                android:textColor="@color/gray"
                android:gravity="left"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="Cena: 1299 din"
                android:textColor="@color/gray"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:id="@+id/recommendBook"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/recommend"
                android:textColor="@color/white"
                android:textSize="18dp"></Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:onClick="bookComments"
                android:text="@string/commentView"
                android:textColor="@color/white"
                android:textSize="18dp"></Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="addToCart"
                android:text="@string/addToCart"
                android:textColor="@color/white"
                android:textSize="18dp"></Button>

        </LinearLayout>



    </ScrollView>


    <!--this the navigation view which draws
    and shows the navigation drawer-->
    <!--include the menu created in the menu folder-->

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>